--- a/host Server/res/css/index.css
+++ b/host Server/res/css/index.css
@@ -164,6 +164,9 @@ body {
     border-left: 0.5vw solid var(--text-color);
     transform: rotate(-45deg);
 }
+#downloadbox a{
+    padding: 0.5em;
+}
 
 /* Keylog */
 #keybox {
